--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -5,5 +5,8 @@ jobs:
     hello:
         runs-on: self-hosted
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
             - name: Say hello
-              run: echo "Hello world!"
+              run: node hello.js
